Fix translation for carrier name

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1068,7 +1068,7 @@
     <string name="pref_smart_radio_mode_change_delay_summary">网络模式改变延迟指定秒</string>
     
     <!-- Lockscreen: custom carrier text -->
-    <string name="pref_lockscreen_carrier_text_title">自定义机主信息</string>
+    <string name="pref_lockscreen_carrier_text_title">自定义运营商名称</string>
     <string name="carrier_text_default">默认</string>
     <string name="carrier_text_empty">空</string>
 
